--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nae-react-auth",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "nae auth",
   "author": "newageerp",
   "license": "MIT",
@@ -24,7 +24,8 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^17.0.0"
+    "react": "^17.0.0",
+    "nae-react-core-styles": "^0.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -62,7 +63,6 @@
     "dist"
   ],
   "dependencies": {
-    "nae-react-core-styles": "0.0.1",
     "react-bootstrap": "^1.4.0",
     "react-router-dom": "^5.2.0"
   }
